--- a/src/app/companies/company-login/company-login.component.html
+++ b/src/app/companies/company-login/company-login.component.html
@@ -1,9 +1,9 @@
 <div class="container">
   <div class="card card-container">
       <div class="col-xs-12 text-center">
-        <h2>User Login</h2>
-      </div>
-      <br>
+          <h2>Company Login</h2>
+        </div>
+        <br>
       <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
       <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
       <p id="profile-name" class="profile-name-card"></p>
@@ -21,6 +21,6 @@
       <a href="#" class="forgot-password">
           Forgot the password?
       </a>
-      <a routerLink="/user/register">Don't have an account?</a>
+      <a routerLink="/company/register">Don't have an account?</a>
   </div><!-- /card-container -->
 </div>
