--- a/src/app/companies/company-login/company-login.component.html
+++ b/src/app/companies/company-login/company-login.component.html
@@ -18,7 +18,7 @@
           </div>
           <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
       </form><!-- /form -->
-      <a href="#" class="forgot-password">
+      <a routerLink="/forgot-password" class="forgot-password">
           Forgot the password?
       </a>
       <a routerLink="/company/register">Don't have an account?</a>
