--- a/src/app/users/user-login/user-login.component.html
+++ b/src/app/users/user-login/user-login.component.html
@@ -7,10 +7,10 @@
       <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
       <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
       <p id="profile-name" class="profile-name-card"></p>
-      <form class="form-signin">
+      <form class="form-signin" #signInForm="ngForm" (ngSubmit)="signin(signInForm)">
           <span id="reauth-email" class="reauth-email"></span>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+          <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" placeholder="Email address" required autofocus>
+          <input type="password" id="inputPassword" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" placeholder="Password" required>
           <div id="remember" class="checkbox">
               <label>
                   <input type="checkbox" value="remember-me"> Remember me
@@ -19,8 +19,9 @@
           <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
       </form><!-- /form -->
       <a routerLink="/forgot-password" class="forgot-password">
-          Forgot the password?
-      </a>
-      <a routerLink="/user/register">Don't have an account?</a>
+        Forgot the password?
+    </a>
+    <a routerLink="/user/register">Don't have an account?</a>
+      <button (click)="logout()" *ngIf="loggedIn">LogOut</button>
   </div><!-- /card-container -->
 </div>
