--- a/src/app/users/user-register/user-register.component.html
+++ b/src/app/users/user-register/user-register.component.html
@@ -4,16 +4,16 @@
       <h2>User Registeration</h2>
     </div>
     <br>
-    <form class="form-signin">
+    <form class="form-signin" #registerForm="ngForm" (ngSubmit)="register(registerForm)">
       <span id="reauth-email" class="reauth-email"></span>
-      <input type="text" id="first-name" class="form-control" placeholder="First Name" required autofocus>
-      <input type="text" id="last-name" class="form-control" placeholder="Last Name" required>
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <input type="text" id="first-name" class="form-control" name="fname" #fname="ngModel" [(ngModel)]="user.fname" placeholder="First Name" required autofocus>
+      <input type="text" id="last-name" class="form-control" name="lname" #lname="ngModel" [(ngModel)]="user.lname" placeholder="Last Name" required>
+      <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" placeholder="Email address" required>
+      <input type="password" id="inputPassword" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" placeholder="Password" required>
       <input type="password" id="inputCPassword" class="form-control" placeholder="Confirm Password" required>
+      <label class="error">{{errorMessage}}</label>
       <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Register</button>
     </form>
-    <!-- /form -->
+    <a routerLink="/user/login">Already have an account?</a>
   </div>
-  <!-- /card-container -->
 </div>
