Added reset password function and get profile

--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -4,9 +4,9 @@
         <h2>Reset Password</h2>
       </div>
       <p>Enter your email to send a reset link</p>
-      <form class="form-signin">
+      <form class="form-signin" #resetForm="ngForm" (ngSubmit)="resetPassword(resetForm)">
           <span id="reauth-email" class="reauth-email"></span>
-          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+          <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="email" class="form-control" placeholder="Email address" required autofocus>
           <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Send Reset</button>
       </form><!-- /form -->
   </div><!-- /card-container -->
