--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -1,3 +1,16 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <h2>Seekers</h2>
+  <div class="collapse in navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/company/login" routerLinkActive="active">Company Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/user/login" routerLinkActive="active">User Login</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class="container">
   <div class="card card-container">
       <div class="col-xs-12 text-center">
@@ -6,8 +19,8 @@
       <p>Enter your email to send a reset link</p>
       <form class="form-signin" #resetForm="ngForm" (ngSubmit)="resetPassword(resetForm)">
           <span id="reauth-email" class="reauth-email"></span>
-          <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="email" class="form-control" placeholder="Email address" required autofocus>
-          <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Send Reset</button>
+          <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="Email" class="form-control" placeholder="Email address" required autofocus>
+          <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Reset</button>
       </form><!-- /form -->
   </div><!-- /card-container -->
 </div>
