--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,17 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <h2>Seekers</h2>
+  <div class="collapse in navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" *ngIf="isUser" routerLink="/user/login" routerLinkActive="active">Profile</a>
+        <a class="nav-link" *ngIf="!isUser" routerLink="/company/login" routerLinkActive="active">Profile</a>
+      </li>
+    </ul>
+  </div>
+  <div class="form-inline">
+    <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
+  </div>
+</nav>
 <p>
   home works!
 </p>
