--- a/src/app/users/user-register/user-register.component.html
+++ b/src/app/users/user-register/user-register.component.html
@@ -1,3 +1,16 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <h2>Seekers</h2>
+  <div class="collapse in navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/company/login" routerLinkActive="active">Company Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" routerLink="/user/login" routerLinkActive="active">User Login</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class="container">
   <div class="card card-container">
     <div class="col-xs-12 text-center">
