--- a/src/app/users/user-login/user-login.component.html
+++ b/src/app/users/user-login/user-login.component.html
@@ -31,6 +31,7 @@
           </div>
           <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
       </form><!-- /form -->
+      <button class="btn btn-lg btn-danger btn-block" (click)="googleLogin()"><i class="glyphicon glyphicon-sunglasses"></i>Google Sign in</button>
       <a routerLink="/forgot-password" class="forgot-password">
         Forgot the password?
     </a>
