--- a/src/app/companies/company-register/company-register.component.html
+++ b/src/app/companies/company-register/company-register.component.html
@@ -1,17 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <h2>Seekers</h2>
-  <div class="collapse in navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/company/login" routerLinkActive="active">Company Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/user/login" routerLinkActive="active">User Login</a>
-      </li>
-    </ul>
-  </div>
-</nav>
-
 <div class="container">
   <div class="card card-container">
     <div class="col-xs-12 text-center">
@@ -22,7 +8,7 @@
       <span id="reauth-email" class="reauth-email"></span>
       <input type="text" id="company-name" name="name" #name="ngModel" [(ngModel)]="company.name" class="form-control" placeholder="Company Name" required autofocus>
       <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="company.email" class="form-control" placeholder="Email address" required>
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <input type="password" id="inputPassword" name="password" #password="ngModel" [(ngModel)]="company.password" class="form-control" placeholder="Password" required>
       <input type="password" id="inputCPassword" class="form-control" placeholder="Confirm Password" required>
       <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Register</button>
     </form>
