--- a/src/app/users/user-login/user-login.component.html
+++ b/src/app/users/user-login/user-login.component.html
@@ -1,16 +1,3 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <h2>Seekers</h2>
-  <div class="collapse in navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/company/login" routerLinkActive="active">Company Login</a>
-      </li>
-      <li class="nav-item active">
-        <a class="nav-link" routerLink="/user/login" routerLinkActive="active">User Login</a>
-      </li>
-    </ul>
-  </div>
-</nav>
 <div class="container">
   <div class="card card-container">
       <div class="col-xs-12 text-center">
@@ -29,13 +16,13 @@
                   <input type="checkbox" value="remember-me"> Remember me
               </label>
           </div>
+          <label *ngIf="wrongAuth" id="wrongAuth">Wrong username or password</label>
           <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
       </form><!-- /form -->
-      <button class="btn btn-lg btn-danger btn-block" (click)="googleLogin()"><i class="glyphicon glyphicon-sunglasses"></i>Google Sign in</button>
+      <button class="btn btn-lg btn-danger btn-block" (click)="googleLogin()"><i class="fa fa-google-plus" style="float: left;"></i>Sign in with Google</button>
       <a routerLink="/forgot-password" class="forgot-password">
         Forgot the password?
     </a>
     <a routerLink="/user/register">Don't have an account?</a>
-      <button (click)="logout()" *ngIf="loggedIn">LogOut</button>
   </div><!-- /card-container -->
 </div>
