--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <h2>Seekers</h2>
   <div class="collapse in navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
@@ -8,16 +8,25 @@
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/login">User Login</a>
       </li>
-      <li *ngIf="isAuth" class="nav-item">
-        <a class="btn btn-outline-secondary" *ngIf="isUser" routerLink="/user/login" routerLinkActive="active">Profile</a>
-        <a class="btn btn-outline-secondary" *ngIf="isCompany" routerLink="/company/login" routerLinkActive="active">Profile</a>
+    </ul>
+    <ul *ngIf="isAuth && isUser">
+      <li class="nav-item">
+        <a class="btn btn-outline-secondary" routerLink="/user/profile" routerLinkActive="active">Profile</a>
+      </li>
+    </ul>
+    <ul *ngIf="isAuth && isCompany">
+      <li class="nav-item">
+        <a class="btn btn-outline-secondary" routerLink="/company/profile" routerLinkActive="active">Profile</a>
       </li>
     </ul>
   </div>
-  <div class="form-inline">
-    <button class="btn btn-outline-danger my-2 my-sm-0" *ngIf="isAuth" (click)="logout()">Logout</button>
+  <div class="form-inline" *ngIf="isAuth">
+    <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
   </div>
-</nav>
+</nav> -->
+
+<app-main-nav></app-main-nav>
 
 <ng4-loading-spinner [threshold]="10" [timeout]="20000" [zIndex]="9999"></ng4-loading-spinner>
+
 <router-outlet></router-outlet>
