--- a/src/app/companies/company-register/company-register.component.html
+++ b/src/app/companies/company-register/company-register.component.html
@@ -1,3 +1,17 @@
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <h2>Seekers</h2>
+  <div class="collapse in navbar-collapse" id="navbarText">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/company/login">Company Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/login">User Login</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
 <div class="container">
   <div class="card card-container">
     <div class="col-xs-12 text-center">
