--- a/src/app/users/user-jobs/user-jobs.component.html
+++ b/src/app/users/user-jobs/user-jobs.component.html
@@ -6,10 +6,10 @@
           <a class="btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-secondary" routerLink="/user/jobs">Applied Jobs</a>
+          <a class="btn btn-outline-secondary" routerLink="/user/profile">Applied Jobs</a>
         </li>
         <li class="nav-item">
-          <a class="btn btn-outline-secondary" routerLink="/user/search">Search</a>
+          <a class="btn btn-outline-secondary" routerLink="/user/profile">Search</a>
         </li>
       </ul>
     </div>
@@ -18,14 +18,3 @@
       <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
     </div>
   </nav>
-
-<div id="navbar" class="navbar-collapse collapse">
-  <ul class="nav navbar-nav">
-    <li class="active"><a>Home</a></li>
-    <li><a>About</a></li>
-    <li><a>Contact</a></li>
-  </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <li><a href="">Logout</a></li>
-  </ul>
-</div>
