Apply to job is working, and updated on home page

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -25,7 +25,7 @@
   </div>
 </nav> -->
 
-<app-main-nav></app-main-nav>
+<!-- <app-main-nav></app-main-nav> -->
 
 <ng4-loading-spinner [threshold]="10" [timeout]="20000" [zIndex]="9999"></ng4-loading-spinner>
 
