Added loader on each page load, Applied jobs for user is working

--- a/src/app/users/user-profile/user-profile.component.html
+++ b/src/app/users/user-profile/user-profile.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <h2>Seekers</h2>
+  <h2><a id="logo" routerLink="/home">Seekers</a></h2>
     <div class="collapse in navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
