--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,10 @@
 .card {
   padding: 0px !important;
 }
+
+.container {
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-top: 20px;
+  padding: 20px;
+  border-radius: 10px;
+}
