--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,23 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <h2>Seekers</h2>
+  <h2><a id="logo" routerLink="/home">Seekers</a></h2>
   <div class="collapse in navbar-collapse" id="navbarText">
     <ul *ngIf="isUser" class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-outline-secondary" routerLink="/user/profile">Applied Jobs</a>
+        <a class="btn btn-outline-secondary" routerLink="/user/jobs">Applied Jobs</a>
       </li>
       <li class="nav-item">
         <a class="btn btn-outline-secondary" routerLink="/user/profile">Search</a>
       </li>
     </ul>
-    <ul *ngIf="!isUser" class="navbar-nav mr-auto">
+    <ul *ngIf="isCompany" class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="btn btn-outline-secondary" routerLink="/company/profile">Profile</a>
       </li>
       <li class="nav-item">
-        <a class="btn btn-outline-info" data-toggle="modal" data-target="#myModal">My Jobs</a>
+          <a class="btn btn-outline-secondary" routerLink="/company/jobs">My Jobs</a>
       </li>
     </ul>
   </div>
@@ -28,7 +28,8 @@
 </nav>
 
 <div class="container">
-  <div *ngIf="jobs?.length > 0" class="row">
+  <!--User interface-->
+  <div *ngIf="jobs?.length > 0 && isUser" class="row">
     <div *ngFor="let item of jobs" class="card border-light mb-3" style="width: 18rem;">
       <div class="card-header">
         <h4>{{item.title}}</h4>
@@ -42,8 +43,15 @@
     </div>
   </div>
 
+  <!--Company interface-->
+  <div *ngIf="isCompany" class="row">
+    <div class="col-md-4">
+      <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Create Job</button>
+    </div>
+  </div>
+
   <!-- Modal -->
-  <div class="modal fade" id="myModal" role="dialog">
+  <div *ngIf="isCompany" class="modal fade" id="myModal" role="dialog">
     <div class="modal-dialog">
 
       <!-- Modal content-->
