--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -1,6 +1,11 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <h2>Seekers</h2>
-  <div class="collapse in navbar-collapse" id="navbarText">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/company/login">Company Login</a>
@@ -14,14 +19,15 @@
 
 <div class="container">
   <div class="card card-container">
-      <div class="col-xs-12 text-center">
-        <h2>Reset Password</h2>
-      </div>
-      <p>Enter your email to send a reset link</p>
-      <form class="form-signin" #resetForm="ngForm" (ngSubmit)="resetPassword(resetForm)">
-          <span id="reauth-email" class="reauth-email"></span>
-          <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="Email" class="form-control" placeholder="Email address" required autofocus>
-          <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Reset</button>
-      </form><!-- /form -->
+    <div class="col-xs-12 text-center">
+      <h2>Reset Password</h2>
+    </div>
+    <p>Enter your email to send a reset link</p>
+    <form class="form-signin" #resetForm="ngForm" (ngSubmit)="resetPassword(resetForm)">
+      <span id="reauth-email" class="reauth-email"></span>
+      <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="Email" class="form-control"
+        placeholder="Email address" required autofocus>
+      <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Reset</button>
+    </form><!-- /form -->
   </div><!-- /card-container -->
 </div>
