--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -4,7 +4,7 @@
 
 .container {
   background-color: rgba(255, 255, 255, 0.5);
-  margin-top: 20px;
+  margin: 20px auto;
   padding: 20px;
   border-radius: 10px;
 }
