--- a/src/app/users/user-jobs/user-jobs.component.html
+++ b/src/app/users/user-jobs/user-jobs.component.html
@@ -1,39 +1,40 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <h2><a id="logo" routerLink="/home">Seekers</a></h2>
-    <div class="collapse in navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary" routerLink="/user/profile">Applied Jobs</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary" routerLink="/user/profile">Search</a>
-        </li>
-      </ul>
-    </div>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="form-inline">
-      <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
-    </div>
-  </nav>
-
-  <div class="container">
-      <table class="table table-striped table-dark">
-          <thead>
-            <tr>
-              <th scope="col">First</th>
-              <th scope="col">Last</th>
-              <th scope="col">Handle</th>
-            </tr>
-          </thead>
-          <tbody *ngFor="let item of appliedJobs">
-            <tr *ngIf="item.applied">
-              <td>{{item.title}}</td>
-              <td>{{item.type}}</td>
-              <td>{{item.salary}}</td>
-            </tr>
-          </tbody>
-        </table>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Applied Jobs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Search</a>
+      </li>
+    </ul>
   </div>
+</nav>
+
+<div class="container">
+  <table class="table table-striped table-dark">
+    <thead>
+      <tr>
+        <th scope="col">Title</th>
+        <th scope="col">Job Type</th>
+        <th scope="col">Salary</th>
+      </tr>
+    </thead>
+    <tbody *ngFor="let item of appliedJobs">
+      <tr *ngIf="item.applied">
+        <td>{{item.title}}</td>
+        <td>{{item.type}}</td>
+        <td>{{item.salary}}</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
