--- a/src/app/users/user-login/user-login.component.html
+++ b/src/app/users/user-login/user-login.component.html
@@ -1,11 +1,16 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <h2>Seekers</h2>
-  <div class="collapse in navbar-collapse" id="navbarText">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/company/login">Company Login</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/login">User Login</a>
       </li>
     </ul>
@@ -14,28 +19,31 @@
 
 <div class="container">
   <div class="card card-container">
-      <div class="col-xs-12 text-center">
-        <h2>User Login</h2>
+    <div class="col-xs-12 text-center">
+      <h2>User Login</h2>
+    </div>
+    <br>
+    <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
+    <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
+    <p id="profile-name" class="profile-name-card"></p>
+    <form class="form-signin" #signInForm="ngForm" (ngSubmit)="signin(signInForm)">
+      <span id="reauth-email" class="reauth-email"></span>
+      <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control"
+        placeholder="Email address" required autofocus>
+      <input type="password" id="inputPassword" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password"
+        placeholder="Password" required>
+      <div id="remember" class="checkbox">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
       </div>
-      <br>
-      <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
-      <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
-      <p id="profile-name" class="profile-name-card"></p>
-      <form class="form-signin" #signInForm="ngForm" (ngSubmit)="signin(signInForm)">
-          <span id="reauth-email" class="reauth-email"></span>
-          <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" placeholder="Email address" required autofocus>
-          <input type="password" id="inputPassword" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" placeholder="Password" required>
-          <div id="remember" class="checkbox">
-              <label>
-                  <input type="checkbox" value="remember-me"> Remember me
-              </label>
-          </div>
-          <label *ngIf="wrongAuth" id="wrongAuth">Wrong username or password</label>
-          <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
-      </form><!-- /form -->
-      <button class="btn btn-lg btn-danger btn-block" (click)="googleLogin()"><i class="fa fa-google-plus" style="float: left;"></i>Sign in with Google</button>
-      <a routerLink="/forgot-password" class="forgot-password">
-        Forgot the password?
+      <label *ngIf="wrongAuth" id="wrongAuth">Wrong username or password</label>
+      <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
+    </form><!-- /form -->
+    <button class="btn btn-lg btn-danger btn-block" (click)="googleLogin()"><i class="fa fa-google-plus" style="float: left;"></i>Sign
+      in with Google</button>
+    <a routerLink="/forgot-password" class="forgot-password">
+      Forgot the password?
     </a>
     <a routerLink="/user/register">Don't have an account?</a>
   </div><!-- /card-container -->
