--- a/src/app/users/user-profile/user-profile.component.html
+++ b/src/app/users/user-profile/user-profile.component.html
@@ -1,31 +1,117 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <h2><a id="logo" routerLink="/home">Seekers</a></h2>
-    <div class="collapse in navbar-collapse" id="navbarText">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary" routerLink="/user/jobs">Applied Jobs</a>
-        </li>
-        <li class="nav-item">
-          <a class="btn btn-outline-secondary" routerLink="/user/search">Search</a>
-        </li>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Profile <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">Applied Jobs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/search">Search</a>
+      </li>
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
+    </form>
+  </div>
+</nav>
+
+<div class="container bootstrap snippet">
+  <div class="row">
+    <div class="col-sm-3">
+      <!--left col-->
+      <div class="text-center">
+        <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail" alt="avatar">
+        <h6>Upload a different photo...</h6>
+        <input type="file" class="text-center center-block file-upload">
+      </div>
+      <hr><br>
+      <div class="card">
+        <div class="card-header">
+          Website <i class="fa fa-link fa-1x"></i>
+        </div>
+        <ul class="list-group list-group-flush">
+          <li class="list-group-item"><a href="http://bootnipets.com">bootnipets.com</a></li>
+        </ul>
+      </div>
+      <ul class="list-group">
+        <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i></li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>Shares</strong></span> 125</li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>Likes</strong></span> 13</li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>Posts</strong></span> 37</li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>Followers</strong></span> 78</li>
       </ul>
     </div>
+    <!--/col-3-->
+    <div class="col-sm-9">
+      <div class="tab-content">
+        <div class="tab-pane active" id="home">
+          <hr>
+          <div *ngIf="updated" class="alert alert-success">
+              <strong>Success!</strong> Profile has been updated
+          <form class="row form" #profileForm="ngForm" (ngSubmit)="updateProfile(profileForm)" id="profileForm">
+            <input type="hidden" class="form-control" name="$key" #$key="ngModel" [(ngModel)]="user.$key" />
+            <div class="form-group col-sm-6">
+              <label for="fullName">
+                <h4>Full name</h4>
+              </label>
+              <input type="text" class="form-control" name="fullName" #fullName="ngModel" [(ngModel)]="user.fullName" placeholder="Please enter your full name" title="Please enter your full name" />
+            </div>
 
-    <div class="form-inline">
-      <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
+            <div class="form-group col-sm-6">
+              <label for="phone">
+                <h4>Phone</h4>
+              </label>
+              <input type="text" class="form-control" name="phone" #phone="ngModel" [(ngModel)]="user.phone" id="phone" placeholder="enter phone" title="enter your phone number if any.">
+            </div>
+
+            <div class="form-group col-sm-6">
+              <label for="mobile">
+                <h4>Mobile</h4>
+              </label>
+              <input type="text" class="form-control" name="mobile" id="mobile" placeholder="enter mobile number" title="enter your mobile number if any.">
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="email">
+                <h4>Email</h4>
+              </label>
+              <input type="email" class="form-control" value="{{user.email}}" name="email" id="email" disabled placeholder="you@email.com"
+                title="enter your email.">
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="email">
+                <h4>Location</h4>
+              </label>
+              <input type="email" class="form-control" id="location" placeholder="somewhere" title="enter a location">
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="resume">
+                <h4>Resume</h4>
+              </label>
+              <br>
+              <input type="file" name="resume" id="resume">
+            </div>
+            <div class="form-group col-sm-6">
+              <label for="password2">
+                <h4>Resume Uploaded</h4>
+              </label>
+              <br>
+              <a>No Resume Uploaded</a>
+            </div>
+            <div class="form-group col-sm-12">
+              <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
+              <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
+            </div>
+          </form>
+        </div>
+      </div>
     </div>
-  </nav>
-
-<div id="navbar" class="navbar-collapse collapse">
-  <ul class="nav navbar-nav">
-    <li class="active"><a>Home</a></li>
-    <li><a>About</a></li>
-    <li><a>Contact</a></li>
-  </ul>
-  <ul class="nav navbar-nav navbar-right">
-    <li><a href="">Logout</a></li>
-  </ul>
+  </div>
 </div>
