--- a/src/app/users/user-register/user-register.component.html
+++ b/src/app/users/user-register/user-register.component.html
@@ -1,16 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <h2>Seekers</h2>
-  <div class="collapse in navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/company/login">Company Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/user/login">User Login</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+    <h2>Seekers</h2>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link btn btn-outline-secondary" routerLink="/company/login">Company Login</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link btn btn-outline-secondary" routerLink="/user/login">User Login</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 <div class="container">
   <div class="card card-container">
