Week 9 first commit

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -26,7 +26,7 @@
 </nav> -->
 
 <!-- <app-main-nav></app-main-nav> -->
-
+<head><title>Week 9</title></head>
 <ng4-loading-spinner [threshold]="10" [timeout]="20000" [zIndex]="9999"></ng4-loading-spinner>
 
 <router-outlet></router-outlet>
