--- a/src/app/auth.css
+++ b/src/app/auth.css
@@ -6,7 +6,8 @@
  */
 body {
   height: 100%;
-  background: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33)) no-repeat center center fixed !important;
+  background: #ff0;
+  /* background: linear-gradient(rgb(104, 145, 162), rgb(12, 97, 33)) no-repeat center center fixed !important; */
 }
 
 .card-container.card {
