--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,7 +38,7 @@
             <div class="footer-col col-lg-3 col-md-6 col-12">
                 <div class="single-widget widget-about">
                     <h5 class="widget-title">About Us</h5>
-                    <img src="images/others/about-widget-image.jpg" alt="about widget image">
+                    <!-- <img src="images/others/about-widget-image.jpg" alt="about widget image"> -->
                     <p>We are a team of designers and developers that create high quality <a href="www.dkstudio.in">Readmore...</a></p>
                 </div>
             </div>
