--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,35 +1,8 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <h2>Seekers</h2>
-  <div class="collapse in navbar-collapse" id="navbarText">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/company/login">Company Login</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/user/login">User Login</a>
-      </li>
-    </ul>
-    <ul *ngIf="isAuth && isUser">
-      <li class="nav-item">
-        <a class="btn btn-outline-secondary" routerLink="/user/profile" routerLinkActive="active">Profile</a>
-      </li>
-    </ul>
-    <ul *ngIf="isAuth && isCompany">
-      <li class="nav-item">
-        <a class="btn btn-outline-secondary" routerLink="/company/profile" routerLinkActive="active">Profile</a>
-      </li>
-    </ul>
-  </div>
-  <div class="form-inline" *ngIf="isAuth">
-    <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
-  </div>
-</nav> -->
-
-<!-- <app-main-nav></app-main-nav> -->
 
 <ng4-loading-spinner [threshold]="10" [timeout]="99999999" [zIndex]="9999"></ng4-loading-spinner>
-
 <router-outlet></router-outlet>
+
+<!--
 <footer class="footer">
 <div class="footer-bottom-area bg-dark-light section-padding-sm">
     <div class="container">
@@ -38,8 +11,7 @@
             <div class="footer-col col-lg-3 col-md-6 col-12">
                 <div class="single-widget widget-about">
                     <h5 class="widget-title">About Us</h5>
-                    <!-- <img src="images/others/about-widget-image.jpg" alt="about widget image"> -->
-                    <p>We are a team of designers and developers that create high quality <a href="www.dkstudio.in">Readmore...</a></p>
+                    <p>We are students in class of AIP Spring 2018</p>
                 </div>
             </div>
 
@@ -100,3 +72,4 @@
 
 
 </footer>
+-->
