--- a/src/app/auth.css
+++ b/src/app/auth.css
@@ -37,8 +37,7 @@ a.btn.btn-outline-secondary:hover {
 .card {
   background-color: #F7F7F7;
   padding: 20px 25px 30px;
-  margin: 0 auto 25px;
-  margin-top: 50px;
+  margin: 50px auto 25px;
   -moz-border-radius: 2px;
   -webkit-border-radius: 2px;
   border-radius: 2px;
