--- a/src/app/companies/company-jobs/company-jobs.component.html
+++ b/src/app/companies/company-jobs/company-jobs.component.html
@@ -10,7 +10,7 @@
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/company/profile">Profile</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active active">
         <a class="nav-link btn btn-outline-secondary" routerLink="/company/jobs">My Jobs</a>
       </li>
     </ul>
@@ -21,22 +21,28 @@
 </nav>
 
 <div class="container">
-  <table class="table table-striped table-dark">
-    <thead>
-      <tr>
-        <th scope="col">Title</th>
-        <th scope="col">Job Type</th>
-        <th scope="col">Salary</th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody *ngFor="let item of companyJobs">
-      <tr>
-        <td>{{item.title}}</td>
-        <td>{{item.type}}</td>
-        <td>{{item.salary}}</td>
-        <td><a [routerLink]="['/company/job-appliers', item.id, 'all-applicants']">See Applicants</a></td>
-      </tr>
-    </tbody>
-  </table>
+  <h2 class="text-center">My Jobs</h2>
+</div>
+
+<div class="container">
+  <div class="table-responsive">
+    <table class="table table-striped table-light">
+      <thead>
+        <tr>
+          <th scope="col">Title</th>
+          <th scope="col">Job Type</th>
+          <th scope="col">Salary</th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody *ngFor="let item of companyJobs">
+        <tr>
+          <td>{{item.title}}</td>
+          <td>{{item.type}}</td>
+          <td>{{item.salary}}</td>
+          <td><a [routerLink]="['/company/job-applicants', item.$key, 'all-applicants']">See Applicants</a></td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 </div>
