--- a/src/app/companies/company-profile/company-profile.component.html
+++ b/src/app/companies/company-profile/company-profile.component.html
@@ -7,7 +7,7 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link btn btn-outline-secondary" routerLink="/company/profile">Profile</a>
       </li>
       <li class="nav-item">
@@ -35,7 +35,7 @@
           Website <i class="fa fa-link fa-1x"></i>
         </div>
         <ul class="list-group list-group-flush">
-          <li class="list-group-item"><a href="http://bootnipets.com">bootnipets.com</a></li>
+          <li *ngIf="company.website !== null" class="list-group-item"><a href="http://bootnipets.com">bootnipets.com</a></li>
         </ul>
       </div>
       <ul class="list-group">
@@ -56,10 +56,10 @@
           <form class="row form" #profileForm="ngForm" (ngSubmit)="updateProfile(profileForm)" id="profileForm">
             <input type="hidden" class="form-control" name="$key" #$key="ngModel" [(ngModel)]="company.$key" />
             <div class="form-group col-sm-6">
-              <label for="fullName">
-                <h4>Full name</h4>
+              <label for="Name">
+                <h4>Name</h4>
               </label>
-              <input type="text" class="form-control" name="fullName" #fullName="ngModel" [(ngModel)]="company.name"
+              <input type="text" class="form-control" name="name" #name="ngModel" [(ngModel)]="company.name"
                 placeholder="Please enter your full name" title="Please enter your name" />
             </div>
 
@@ -80,13 +80,13 @@
             </div>
             <div class="form-group col-sm-6">
               <label for="location">
-                <h4>Location</h4>
+                <h4>Address</h4>
               </label>
-              <input type="text" name="location" class="form-control" id="location" placeholder="somewhere" title="enter a location">
+              <input type="text" name="address" #address="ngModel" [(ngModel)]="company.address" class="form-control"
+                id="address" placeholder="Enter compay address" title="Enter your address">
             </div>
             <div class="form-group col-sm-12">
               <button class="btn btn-lg btn-success" type="submit"><i class="glyphicon glyphicon-ok-sign"></i> Save</button>
-              <button class="btn btn-lg" type="reset"><i class="glyphicon glyphicon-repeat"></i> Reset</button>
             </div>
           </form>
         </div>
