--- a/src/app/companies/company-register/company-register.component.html
+++ b/src/app/companies/company-register/company-register.component.html
@@ -31,10 +31,11 @@
         placeholder="Email address" required>
       <input type="password" id="inputPassword" name="password" #password="ngModel" [(ngModel)]="company.password"
         class="form-control" placeholder="Password" required>
-      <input type="password" id="inputCPassword" class="form-control" placeholder="Confirm Password" required>
+      <input type="password" id="inputCPassword" class="form-control" name="cpassword" #cpassword="ngModel" [(ngModel)]="company.cpassword" placeholder="Confirm Password" required>
+      <div *ngIf="errorMessage !== null" class="alert alert-danger">
+        <strong>Error!</strong> {{errorMessage}}
+      </div>
       <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Register</button>
     </form>
-    <!-- /form -->
   </div>
-  <!-- /card-container -->
 </div>
