--- a/src/app/forget-password/forget-password.component.html
+++ b/src/app/forget-password/forget-password.component.html
@@ -27,6 +27,12 @@
       <span id="reauth-email" class="reauth-email"></span>
       <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="Email" class="form-control"
         placeholder="Email address" required autofocus>
+        <div *ngIf="successMessage !== null" class="alert alert-success">
+          <strong>Success!</strong> {{successMessage}}
+        </div>
+        <div *ngIf="errorMessage !== null" class="alert alert-danger">
+          <strong>Error!</strong> {{errorMessage}}
+        </div>
       <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Reset</button>
     </form><!-- /form -->
   </div><!-- /card-container -->
