--- a/src/app/users/user-jobs/user-jobs.component.html
+++ b/src/app/users/user-jobs/user-jobs.component.html
@@ -11,17 +11,26 @@
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
       </li>
       <li class="nav-item active">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Applied Jobs</a>
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">Applied Jobs</a>
       </li>
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Search</a>
       </li>
     </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
+    </form>
   </div>
 </nav>
-
 <div class="container">
-  <table class="table table-striped table-dark">
+  <h2 class="text-center">Applied Jobs</h2>
+</div>
+<div *ngIf="appliedJobs.length === 0" class="container">
+  <h3 class="text-center">You haven't applied for any job yet :(</h3>
+</div>
+<div *ngIf="appliedJobs.length !== 0" class="container">
+  <div class="table-responsive">
+  <table class="table table-striped table-light">
     <thead>
       <tr>
         <th scope="col">Title</th>
@@ -30,11 +39,12 @@
       </tr>
     </thead>
     <tbody *ngFor="let item of appliedJobs">
-      <tr *ngIf="item.applied">
+      <tr>
         <td>{{item.title}}</td>
         <td>{{item.type}}</td>
         <td>{{item.salary}}</td>
       </tr>
     </tbody>
   </table>
+</div>
 </div>
