--- a/src/app/users/user-login/user-login.component.html
+++ b/src/app/users/user-login/user-login.component.html
@@ -23,7 +23,6 @@
       <h2>User Login</h2>
     </div>
     <br>
-    <!-- <img class="profile-img-card" src="//lh3.googleusercontent.com/-6V8xOA6M7BA/AAAAAAAAAAI/AAAAAAAAAAA/rzlHcD0KYwo/photo.jpg?sz=120" alt="" /> -->
     <img id="profile-img" class="profile-img-card" src="//ssl.gstatic.com/accounts/ui/avatar_2x.png" />
     <p id="profile-name" class="profile-name-card"></p>
     <form class="form-signin" #signInForm="ngForm" (ngSubmit)="signin(signInForm)">
@@ -32,19 +31,16 @@
         placeholder="Email address" required autofocus>
       <input type="password" id="inputPassword" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password"
         placeholder="Password" required>
-      <div id="remember" class="checkbox">
-        <label>
-          <input type="checkbox" value="remember-me"> Remember me
-        </label>
+      <div *ngIf="errorMessage !== null" class="alert alert-danger">
+        <strong>Error!</strong> {{errorMessage}}
       </div>
-      <label *ngIf="wrongAuth" id="wrongAuth">Wrong username or password</label>
       <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Sign in</button>
-    </form><!-- /form -->
+    </form>
     <button class="btn btn-lg btn-danger btn-block" (click)="googleLogin()"><i class="fa fa-google-plus" style="float: left;"></i>Sign
       in with Google</button>
     <a routerLink="/forgot-password" class="forgot-password">
       Forgot the password?
     </a>
     <a routerLink="/user/register">Don't have an account?</a>
-  </div><!-- /card-container -->
+  </div>
 </div>
