--- a/src/app/users/user-register/user-register.component.html
+++ b/src/app/users/user-register/user-register.component.html
@@ -1,21 +1,21 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <h2>Seekers</h2>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <h2>Seekers</h2>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link btn btn-outline-secondary" routerLink="/company/login">Company Login</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link btn btn-outline-secondary" routerLink="/user/login">User Login</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/company/login">Company Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/login">User Login</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
 <div class="container">
   <div class="card card-container">
@@ -25,12 +25,16 @@
     <br>
     <form class="form-signin" #registerForm="ngForm" (ngSubmit)="register(registerForm)">
       <span id="reauth-email" class="reauth-email"></span>
-      <input type="text" id="first-name" class="form-control" name="fname" #fname="ngModel" [(ngModel)]="user.fname" placeholder="First Name" required autofocus>
-      <input type="text" id="last-name" class="form-control" name="lname" #lname="ngModel" [(ngModel)]="user.lname" placeholder="Last Name" required>
-      <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control" placeholder="Email address" required>
-      <input type="password" id="inputPassword" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password" placeholder="Password" required>
-      <input type="password" id="inputCPassword" class="form-control" placeholder="Confirm Password" required>
-      <label class="error">{{errorMessage}}</label>
+      <input type="text" id="full-name" class="form-control" name="fname" #fname="ngModel" [(ngModel)]="user.fullName"
+        placeholder="Full Name" required autofocus>
+      <input type="email" id="inputEmail" name="email" #email="ngModel" [(ngModel)]="user.email" class="form-control"
+        placeholder="Email address" required>
+      <input type="password" id="inputPassword" class="form-control" name="password" #password="ngModel" [(ngModel)]="user.password"
+        placeholder="Password" required>
+      <input type="password" id="inputCPassword" name="cpassword" #cpassword="ngModel" [(ngModel)]="user.cpassword" class="form-control" placeholder="Confirm Password" required>
+      <div *ngIf="errorMessage !== null" class="alert alert-danger">
+        <strong>Error!</strong> {{errorMessage}}
+      </div>
       <button class="btn btn-lg btn-primary btn-block btn-signin" type="submit">Register</button>
     </form>
     <a routerLink="/user/login">Already have an account?</a>
