--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+@import '~open-iconic/font/css/open-iconic-bootstrap.css';
+
 #logo {
   color: black;
+}
+
+h1, h2 {
+  font-weight: bold;
 }
 
 #logo:hover {
