--- a/src/app/companies/company-profile/company-profile.component.html
+++ b/src/app/companies/company-profile/company-profile.component.html
@@ -13,6 +13,9 @@
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/company/jobs">My Jobs</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/company/interviews">Interviews</a>
+      </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
@@ -40,10 +43,9 @@
       </div>
       <ul class="list-group">
         <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i></li>
-        <li class="list-group-item text-right"><span class="pull-left"><strong>Shares</strong></span> 125</li>
-        <li class="list-group-item text-right"><span class="pull-left"><strong>Likes</strong></span> 13</li>
-        <li class="list-group-item text-right"><span class="pull-left"><strong>Posts</strong></span> 37</li>
-        <li class="list-group-item text-right"><span class="pull-left"><strong>Followers</strong></span> 78</li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>Jobs</strong></span> 125</li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>Applicants</strong></span> 13</li>
+        <li class="list-group-item text-right"><span class="pull-left"><strong>Interviews</strong></span> 37</li>
       </ul>
     </div>
     <!--/col-3-->
