--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,7 +14,10 @@
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">Applied Jobs</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Search</a>
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/interviews">Interviews</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Search Jobs</a>
       </li>
     </ul>
     <ul *ngIf="isCompany" class="navbar-nav mr-auto">
@@ -23,6 +26,9 @@
       </li>
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/company/jobs">My Jobs</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link btn btn-outline-secondary" routerLink="/company/interviews">Interviews</a>
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
