--- a/src/app/admin/dashboard/dashboard.component.html
+++ b/src/app/admin/dashboard/dashboard.component.html
@@ -18,11 +18,30 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-        <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
-      </form>
+      <button class="btn btn-outline-danger my-2 my-sm-0" (click)="logout()">Logout</button>
+    </form>
   </div>
 </nav>
 
 <div class="container">
   <h1 class="text-center">Welcome Admin</h1>
+</div>
+<div class="container text-center">
+  <div class="row">
+    <div class="col-md-3">
+      <h3>Users: </h3><h4 class="btn btn-success">{{nbOfUsers}}</h4>
+    </div>
+
+    <div class="col-md-3">
+      <h3>Companies: </h3><h4 class="btn btn-warning">{{nbOfCompanies}}</h4>
+    </div>
+
+    <div class="col-md-3">
+      <h3>Jobs: </h3><h4 class="btn btn-danger">{{nbOfJobs}}</h4>
+    </div>
+
+    <div class="col-md-3">
+      <h3>Interviews: </h3><h4 class="btn btn-primary">{{nbOfInterviews}}</h4>
+    </div>
+  </div>
 </div>
