--- a/src/app/admin/interviews/interviews.component.html
+++ b/src/app/admin/interviews/interviews.component.html
@@ -7,10 +7,10 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/admin/users">Users</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link btn btn-outline-secondary" routerLink="/admin/companies">Companies</a>
       </li>
       <li class="nav-item">
@@ -24,7 +24,7 @@
 </nav>
 
 <div class="container">
-  <h2 class="text-center">Users</h2>
+  <h2 class="text-center">Interviews</h2>
 </div>
 
 <div class="container">
@@ -32,21 +32,19 @@
     <table class="table table-hover table-striped table-light">
       <thead class="thead-light">
         <tr>
-          <th>Full Name</th>
-          <th>Address</th>
-          <th>Email</th>
-          <th>Phone - Mobile</th>
-          <th>Resume</th>
+          <th>Company</th>
+          <th>User</th>
+          <th>Job</th>
+          <th>Date</th>
           <th></th>
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let item of users">
-          <td>{{item.fullName}}</td>
-          <td>{{item.address}}</td>
-          <td>{{item.email}}</td>
-          <td>{{item.phone}} {{item.mobile}}</td>
-          <td><a href="{{item.resume}}">Download Resume</a></td>
+        <tr *ngFor="let item of interviews">
+          <td>{{item.company}}</td>
+          <td>{{item.user}}</td>
+          <td>{{item.job}}</td>
+          <td>{{item.date}}</td>
           <td><button class="btn btn-primary" (click)="fillModal(item)" data-toggle="modal" data-target="#editModal">Edit</button>&nbsp;
             <button class="btn btn-danger" data-toggle="modal" data-target="#deleteModal" (click)="fillModal(item)">Delete</button></td>
         </tr>
@@ -60,24 +58,25 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Edit User</h4>
+          <h4 class="modal-title">Edit Interview</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-          <input type="hidden" name="$key" #$key="ngModel" [(ngModel)]="user.$key" />
-          <input type="text" name="fullName" #fullName="ngModel" [(ngModel)]="user.fullName" class="form-control"
-            placeholder="Full Name" required autofocus>
-          <input type="text" name="phone" #phone="ngModel" [(ngModel)]="user.phone" class="form-control" placeholder="Phone Number">
-          <input type="text" name="mobile" #mobile="ngModel" [(ngModel)]="user.mobile" class="form-control" placeholder="Mobile Number">
-          <input type="text" name="address" #address="ngModel" [(ngModel)]="user.address" class="form-control"
+          <input type="hidden" name="$key" #$key="ngModel" [(ngModel)]="interview.$key" />
+          <input type="text" name="companyId" #companyId="ngModel" [(ngModel)]="interview.companyId" class="form-control"
+            placeholder="Company Id" autofocus>
+          <input type="text" name="userId" #userId="ngModel" [(ngModel)]="interview.userId" class="form-control"
+            placeholder="User Id">
+          <input type="text" name="jobId" #jobId="ngModel" [(ngModel)]="interview.jobId" class="form-control"
+            placeholder="Jpb Id">
+          <input type="datetime-local" name="date" #date="ngModel" [(ngModel)]="interview.date" class="form-control"
             placeholder="Address">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-success" (click)="editUser(user)" data-dismiss="modal">Save</button>
+          <button type="submit" class="btn btn-success" (click)="editInterview()" data-dismiss="modal">Save</button>
         </div>
       </div>
-
     </div>
   </div>
 
@@ -87,19 +86,18 @@
       <!-- Modal content-->
       <div class="modal-content">
         <div class="modal-header">
-          <h4 class="modal-title">Are you sure you want to delete this user?</h4>
+          <h4 class="modal-title">Are you sure you want to delete this interview?</h4>
           <button type="button" class="close" data-dismiss="modal">&times;</button>
         </div>
         <div class="modal-body">
-          <p>Full name: {{user.fullName}}</p>
-          <p>Email: {{user.email}}</p>
-          <p>Address: {{user.address}}</p>
-          <p>Phone: {{user.phone}}</p>
-          <p>Mobile{{user.mobile}}</p>
+          <p *ngIf="interview.companyId !== ''">Company: {{interview.companyId}}</p>
+          <p *ngIf="interview.userId !== ''">User: {{interview.userId}}</p>
+          <p *ngIf="interview.jobId !== ''">Job: {{interview.jobId}}</p>
+          <p *ngIf="interview.date !== ''">Date: {{interview.date}}</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">No</button>
-          <button type="submit" class="btn btn-success" (click)="delete(user.$key)" data-dismiss="modal">Yes</button>
+          <button type="submit" class="btn btn-success" (click)="delete(interview.$key)" data-dismiss="modal">Yes</button>
         </div>
       </div>
     </div>
