--- a/src/app/companies/company-interviews/company-interviews.component.css
+++ b/src/app/companies/company-interviews/company-interviews.component.css
@@ -1,11 +1,7 @@
 .container {
   background-color: rgba(255, 255, 255, 0.5);
-  margin: 20px auto;
+  margin-top: 20px;
+  margin-bottom: 20px;
   padding: 20px;
   border-radius: 10px;
-}
-
-h4 {
-  color: white;
-  font-size: 24px;
 }
