--- a/src/app/users/user-interviews/user-interviews.component.html
+++ b/src/app/users/user-interviews/user-interviews.component.html
@@ -10,10 +10,10 @@
       <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/profile">Profile</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/jobs">Applied Jobs</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item active">
         <a class="nav-link btn btn-outline-secondary" routerLink="/user/interviews">Interviews</a>
       </li>
       <li class="nav-item">
@@ -25,27 +25,31 @@
     </form>
   </div>
 </nav>
+
 <div class="container">
-  <h2 class="text-center">Applied Jobs</h2>
+  <h2 class="text-center">Interviews</h2>
 </div>
-<div *ngIf="appliedJobs.length === 0" class="container">
-  <h3 class="text-center">You haven't applied for any job yet :(</h3>
+<div *ngIf="interviews.length === 0" class="container">
+  <h3 class="text-center">You don't have any interview :(</h3>
 </div>
-<div *ngIf="appliedJobs.length !== 0" class="container">
+<div *ngIf="interviews.length !== 0" class="container">
   <div class="table-responsive">
   <table class="table table-hover table-striped table-light">
     <thead class="thead-light">
       <tr>
-        <th scope="col">Title</th>
-        <th scope="col">Job Type</th>
-        <th scope="col">Salary</th>
+        <th scope="col">Company</th>
+        <th scope="col">Date</th>
+        <th scope="col"></th>
       </tr>
     </thead>
-    <tbody *ngFor="let item of appliedJobs">
+    <tbody *ngFor="let item of interviews">
       <tr>
-        <td>{{item.title}}</td>
-        <td>{{item.type}}</td>
-        <td>{{item.salary}}</td>
+        <td>{{item.company.name}}</td>
+        <td>{{item.date}}</td>
+        <td *ngIf="item.decision === ''"><button class="btn btn-success" (click)="decide(item, 'accepted')">Accept</button>&nbsp;
+          <button class="btn btn-danger" (click)="decide(item, 'declined')">Decline</button></td>
+          <td *ngIf="item.decision === 'accepted'"><button class="btn btn-success" disabled>Accepted</button></td>
+          <td *ngIf="item.decision === 'declined'"><button class="btn btn-danger" disabled>Declined</button></td>
       </tr>
     </tbody>
   </table>
