Added check profile, added search functionalities, bugs and interfaace fixes

--- a/src/app/admin/interviews/interviews.component.html
+++ b/src/app/admin/interviews/interviews.component.html
@@ -68,7 +68,7 @@
           <input type="text" name="userId" #userId="ngModel" [(ngModel)]="interview.userId" class="form-control"
             placeholder="User Id">
           <input type="text" name="jobId" #jobId="ngModel" [(ngModel)]="interview.jobId" class="form-control"
-            placeholder="Jpb Id">
+            placeholder="Job Id">
           <input type="datetime-local" name="date" #date="ngModel" [(ngModel)]="interview.date" class="form-control"
             placeholder="Address">
         </div>
